--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Aa]ssets/[Aa]rtworks/
+/[Aa]ssets/[Pp]lugins/
+/[Aa]ssets/[Dd]atas/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
